# fuzzy-search

./: Cargo.toml  README.md
src/: lib.rs  main.rs  search.rs  tests.rs
