[package]
name = "fuzzy-search"
version = "0.1.0"
edition = "2021"
description = "A simple fuzzy search library for Rust."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/shmulisarmy/fuzzy-search"

[lib]
name = "fuzzy_search"
path = "src/lib.rs"

[dependencies]
crossterm = "0.27"
